<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/whol"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:lineSpacingExtra="18sp"
            android:text="@string/focus_with"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="45sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:fontFamily="sans-serif-smallcaps" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:lineSpacingExtra="18sp"
            android:text="@string/geoff"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:fontFamily="sans-serif-smallcaps" />

        <TextView
            android:id="@+id/startLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/start_focusing_for"
            android:textSize="24sp"
            app:fontFamily="sans-serif-condensed-medium" />

        <Button
            android:id="@+id/thirtybutton"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_30_minutes"
            android:visibility="visible" />

        <Button
            android:id="@+id/fortyfivebutton"
            android:layout_width="424dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_45_minutes" />

        <Button
            android:id="@+id/onebutton"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1_hour" />

        <Button
            android:id="@+id/onethirtybutton"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1_hour_30_minutes" />

        <Button
            android:id="@+id/twobutton"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/_2_hours" />

        <Button
            android:id="@+id/dataButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/your_acheivements" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>