<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_4470"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            app:srcCompat="@drawable/geoff" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            app:srcCompat="@drawable/csbadge" />

        <TextView
            android:id="@+id/titletwo"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:lineSpacingExtra="18sp"
            android:text="@string/timer"
            android:textAllCaps="false"
            android:textColor="#2C7CBE"
            android:textSize="45sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible"
            app:fontFamily="sans-serif-smallcaps" />

        <ImageView
            android:id="@+id/xyzimage"
            android:layout_width="match_parent"
            android:layout_height="346dp"
            android:layout_weight="1"
            android:contentDescription="@string/xyzimg"
            android:visibility="gone"
            app:srcCompat="@drawable/xyz" />

        <ImageView
            android:id="@+id/chuchuimage"
            android:layout_width="match_parent"
            android:layout_height="351dp"
            android:layout_weight="1"
            android:contentDescription="@string/chuchuimg"
            android:visibility="gone"
            app:srcCompat="@drawable/chuchu" />

        <ImageView
            android:id="@+id/benimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/benimg"
            android:visibility="gone"
            app:srcCompat="@drawable/bennordick" />

        <ImageView
            android:id="@+id/geoffimage"
            android:layout_width="match_parent"
            android:layout_height="276dp"
            android:layout_weight="1"
            android:contentDescription="@string/geoffimg"
            android:visibility="gone"
            app:srcCompat="@drawable/geoff" />

        <ImageView
            android:id="@+id/csimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/csimg"
            android:visibility="visible"
            app:srcCompat="@drawable/csbadge" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time_display"
            android:textSize="64sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/prizelabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prize"
            android:textSize="42sp"
            android:gravity="center"
            android:visibility="visible" />

        <Button
            android:id="@+id/quitButton"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/quit_focusing"
            android:visibility="visible" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>