<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_4470"
    android:baselineAligned="false"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titletwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:gravity="center"
        android:lineSpacingExtra="18sp"
        android:text="@string/timer"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="45sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="sans-serif-smallcaps" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/time_display" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/quit_focusing" />

</LinearLayout>

