<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/achievment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="ACHIEVEMENTS"
                android:textColor="@color/colorPrimary"
                android:textSize="42sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/xlay"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cspic"
                android:layout_width="126dp"
                android:layout_height="83dp"
                android:layout_weight="1"
                android:contentDescription="@string/picfour"
                app:srcCompat="@drawable/csbadge" />

            <TextView
                android:id="@+id/csCount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="30 minutes: CS 125 Badge"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/catpic"
                android:layout_width="18dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:contentDescription="@string/picthree"
                app:srcCompat="@drawable/xyz" />

            <TextView
                android:id="@+id/catCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="45 min: xyz cat"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dogpic"
                android:layout_width="122dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/pictwo"
                app:srcCompat="@drawable/chuchu" />

            <TextView
                android:id="@+id/dogCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="An hour: Chuchu Dog"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/benpic"
                android:layout_width="201dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:contentDescription="@string/picg"
                app:srcCompat="@drawable/bennordick" />

            <TextView
                android:id="@+id/benCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="An hour thirty min: Ben's praise"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/geoffpic"
                android:layout_width="203dp"
                android:layout_height="119dp"
                android:layout_weight="1"
                android:contentDescription="@string/geoffpic"
                app:srcCompat="@drawable/geoff" />

            <TextView
                android:id="@+id/geoffCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Two hours: Geoff's Big Smile"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mainpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_page"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>